Fixes z-index in select component options

--- a/src/styles/components/select.styl
+++ b/src/styles/components/select.styl
@@ -46,6 +46,7 @@
     display none
     min-width 100%
     list-style none
+    z-index 1
 
     .gnocchi--is-open &
       display block
